# python-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cap/: __init__.py
cap/client/: __init__.py  http.py
cap/core/: __init__.py  builders.py  canonical.py  capability_card.py  constants.py  contracts.py  envelopes.py  errors.py
cap/server/: __init__.py  contracts.py  errors.py  fastapi.py  introspection.py  registry.py  responses.py
cap_protocol/: __init__.py
cap_protocol/client/: __init__.py  http.py
cap_protocol/core/: __init__.py  builders.py  capability_card.py  constants.py  contracts.py  disclosure.py  envelopes.py
cap_protocol/server/: __init__.py  contracts.py  errors.py  fastapi.py  registry.py  responses.py
docs/: api-reference.md  architecture.md  development.md  releasing.md
tests/: test_capability_card.py  test_narrate_and_rich_responses.py  test_public_imports.py  test_server_errors.py
