[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cap-protocol"
version = "1.0.4"
description = "Python SDK scaffold for the Causal Agent Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "CausalAgentProtocol" },
]
dependencies = [
  "httpx>=0.24,<1",
  "pydantic>=2,<3",
]
keywords = ["causal", "protocol", "sdk", "cap", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.100,<1",
]
dev = [
  "build>=1,<2",
  "pytest>=8,<10",
]

[project.urls]
Homepage = "https://github.com/CausalAgentProtocol/python-sdk"
Repository = "https://github.com/CausalAgentProtocol/python-sdk"
Documentation = "https://github.com/CausalAgentProtocol/python-sdk/tree/main/docs"
Issues = "https://github.com/CausalAgentProtocol/python-sdk/issues"
Changelog = "https://github.com/CausalAgentProtocol/python-sdk/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["cap", "cap.*"]

[tool.setuptools.package-data]
cap = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
